--- a/DetailArtPhotography/index.html
+++ b/DetailArtPhotography/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youth Photography</title>
+    <title>Art Photography</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
@@ -45,21 +45,21 @@
     </header>
     <!-- Header End -->
     <!-- Main Deatail Stop Crib  Start -->
-    <main class="home deatail-photography">
+    <main class="home deatail-artphotography">
 
         <!-- Deatail Banner Start -->
-        <div class="deatail-photography_banner">
-            <img src="../images/5.png" alt="" srcset="">
+        <div class="deatail-artphotography_banner">
+            <img src="../images/6.png" alt="" srcset="">
         </div>
         <!-- Deatail Banner End -->
 
         <!-- Deatail menu Start  -->
-        <div class="deatail-photography_menu">
+        <div class="deatail-artphotography_menu">
             <div class="container">
-                <div class="photography-menu">
-                    <a href="http://" class="photography-menu_home">Trang Chủ</a> -
-                    <a href="http://" class="photography-menu_library">Thư Viện</a> -
-                    <a href="http://" class="photography-menu_photography">Youth Photography</a>
+                <div class="artphotography-menu">
+                    <a href="http://" class="artphotography-menu_home">Trang Chủ</a> -
+                    <a href="http://" class="artphotography-menu_library">Thư Viện</a> -
+                    <a href="http://" class="artphotography-menu_artphotography">Art Photography</a>
                 </div>
             </div>
         </div>
@@ -78,27 +78,27 @@
                     </div>
                     <div class="deatail-container_img">
                         <div class="container-img_row1">
-                            <img class="img1" src="../images/5.png" alt="">
-                            <img class="img2" src="../images/5.png" alt="">
-                            <img class="img3" src="../images/5.png" alt="">
+                            <img class="img1" src="../images/6.png" alt="">
+                            <img class="img2" src="../images/6.png" alt="">
+                            <img class="img3" src="../images/6.png" alt="">
                         </div>
                         <div class="container-img_row2">
-                            <img class="img4" src="../images/5.png" alt="">
-                            <img class="img5" src="../images/5.png" alt="">
-                            <img class="img6" src="../images/5.png" alt="">
+                            <img class="img4" src="../images/6.png" alt="">
+                            <img class="img5" src="../images/6.png" alt="">
+                            <img class="img6" src="../images/6.png" alt="">
                         </div>
                         <div class="container-img_row3">
-                            <img class="img7" src="../images/5.png" alt="">
+                            <img class="img7" src="../images/6.png" alt="">
                         </div>
                         <div class="container-img_row4">
-                            <img class="img8" src="../images/5.png" alt="">
-                            <img class="img9" src="../images/5.png" alt="">
-                            <img class="img10" src="../images/5.png" alt="">
+                            <img class="img8" src="../images/6.png" alt="">
+                            <img class="img9" src="../images/6.png" alt="">
+                            <img class="img10" src="../images/6.png" alt="">
                         </div>
                         <div class="container-img_row5">
-                            <img class="img11" src="../images/5.png" alt="">
-                            <img class="img12" src="../images/5.png" alt="">
-                            <img class="img13" src="../images/5.png" alt="">
+                            <img class="img11" src="../images/6.png" alt="">
+                            <img class="img12" src="../images/6.png" alt="">
+                            <img class="img13" src="../images/6.png" alt="">
                         </div>
                     </div>
                 </div>
