--- a/DetailYouthPhotography/index.html
+++ b/DetailYouthPhotography/index.html
@@ -73,7 +73,8 @@
                         Youth Photography
                     </div>
                     <div class="deatail-container_description">
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </div>
                     <div class="deatail-container_img">
                         <div class="container-img_row1">
