--- a/index.html
+++ b/index.html
@@ -399,6 +399,22 @@
                                 <p class="item-text">Amet minim mollit non deserunt ullamco es</p>
                             </div>
                         </div>
+                        <div class="blog-item">
+                            <div class="blog-item_img">
+                                <img src="images/Rectangle 1.png" alt="" srcset="">
+                            </div>
+                            <div class="blog-item_text">
+                                <p class="item-text">Amet minim mollit non deserunt ullamco es</p>
+                            </div>
+                        </div>
+                        <div class="blog-item">
+                            <div class="blog-item_img">
+                                <img src="images/Rectangle 1.png" alt="" srcset="">
+                            </div>
+                            <div class="blog-item_text">
+                                <p class="item-text">Amet minim mollit non deserunt ullamco es</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -441,7 +457,8 @@
                             Giờ mở cửa
                         </div>
                         <div class="middo-text_startend">
-                            <img src="images/bx_bx-time-five.png" alt="" srcset=""><span>Mon - Sat: 8:00 am - 8:00 pm</span>
+                            <img src="images/bx_bx-time-five.png" alt="" srcset=""><span>Mon - Sat: 8:00 am - 8:00
+                                pm</span>
                         </div>
                         <div class="middo-text_status">
                             Closed on weekend
@@ -466,15 +483,15 @@
                             Địa chỉ
                         </div>
                         <div class="middo-address_text">
-                            B12-1/8 Khu Đô Thị Chí Linh, TP Vũng Tàu 
-(Đối diện Block A chung cư DIC - PHOENIX)
+                            B12-1/8 Khu Đô Thị Chí Linh, TP Vũng Tàu
+                            (Đối diện Block A chung cư DIC - PHOENIX)
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="footer-bottom_left">
-                    Copyright ©2022 All rights reserved | This template is made by Egitech 
+                    Copyright ©2022 All rights reserved | This template is made by Egitech
                 </div>
                 <div class="footer-bottom_right">
                     Điều khoản sử dụng - Chính sách bảo mật
@@ -496,6 +513,7 @@
                 loop: true,
                 nav: true,
                 margin: 27,
+                autoplay: true,
                 autoplayTimeout: 5000,
                 responsive: {
                     1920: {
