--- a/DetailBeauty/index.html
+++ b/DetailBeauty/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <!-- Deatail menu End  -->
-        
+
         <!-- Deatail container Start  -->
         <div class="home-deatail_container">
             <div class="container">
@@ -79,45 +79,65 @@
                     <div class="deatail-container_img">
                         <img class="img1" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
                             alt="">
-                        <div class="container-img_row2">
-                            <img class="img2" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                            <img class="img3" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                            <img class="img4" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                        </div>
-                        <div class="container-img_row3">
-                            <img class="img5" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                        </div>
-                        <div class="container-img_row4">
-                            <img class="img6" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                            <img class="img7" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
+                        <img class="img2" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img3" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img4" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img5" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img6" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img7" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img8" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img9" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img10" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img11" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img12" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img13" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img14" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
 
-                            <img class="img8" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                        </div>
-                        <div class="container-img_row5">
-                            <img class="img9" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                        </div>
-                        <div class="container-img_row6">
-                            <img class="img10" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                            <img class="img11" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                        </div>
-                        <div class="container-img_row7">
-                            <img class="img12" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                            <img class="img13" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                            <img class="img14" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
-                                alt="">
-                        </div>
+                        <img class="img15" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img16" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img17" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img18" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img19" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img20" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img21" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img22" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img23" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img24" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img25" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img26" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img27" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img28" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img29" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
+                        <img class="img30" src="../images/52548503_2073870049365342_1989082960610983936_n 1 (1).png"
+                            alt="">
                     </div>
                 </div>
             </div>
@@ -286,7 +306,8 @@
                             Giờ mở cửa
                         </div>
                         <div class="middo-text_startend">
-                            <img src="../images/bx_bx-time-five.png" alt="" srcset=""><span>Mon - Sat: 8:00 am - 8:00 pm</span>
+                            <img src="../images/bx_bx-time-five.png" alt="" srcset=""><span>Mon - Sat: 8:00 am - 8:00
+                                pm</span>
                         </div>
                         <div class="middo-text_status">
                             Closed on weekend
@@ -311,15 +332,15 @@
                             Địa chỉ
                         </div>
                         <div class="middo-address_text">
-                            B12-1/8 Khu Đô Thị Chí Linh, TP Vũng Tàu 
-(Đối diện Block A chung cư DIC - PHOENIX)
+                            B12-1/8 Khu Đô Thị Chí Linh, TP Vũng Tàu
+                            (Đối diện Block A chung cư DIC - PHOENIX)
                         </div>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="footer-bottom_left">
-                    Copyright ©2022 All rights reserved | This template is made by Egitech 
+                    Copyright ©2022 All rights reserved | This template is made by Egitech
                 </div>
                 <div class="footer-bottom_right">
                     Điều khoản sử dụng - Chính sách bảo mật
