--- a/DetailBigFamily/index.html
+++ b/DetailBigFamily/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family</title>
+    <title>Big Family</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
@@ -59,8 +59,8 @@
                 <div class="bigfamily-menu">
                     <a href="http://" class="bigfamily-menu_home">Trang Chủ</a> -
                     <a href="http://" class="bigfamily-menu_library">Thư Viện</a> -
-                    <a href="http://" class="bigfamily-menu_bigfamily">Bigfamily</a>
-                </div> 
+                    <a href="http://" class="bigfamily-menu_bigfamily">Big Family</a>
+                </div>
             </div>
         </div>
         <!-- Deatail menu End  -->
@@ -70,39 +70,47 @@
             <div class="container">
                 <div class="deatail-container">
                     <div class="deatail-container_title">
-                        Family
+                        Big Family
                     </div>
                     <div class="deatail-container_description">
                         Lưu giữ khoảnh khắc đẹp ngày thường, những điểm mốc quan trọng của Gia đình tại TooP House.
                     </div>
                     <div class="deatail-container_img">
-                        <div class="container-img_row1">
-                            <img class="img1" src="../images/4.png" alt="">
-                            <img class="img2" src="../images/4.png" alt="">
-                        </div>
-                        <div class="container-img_row2">
-                            <img class="img3" src="../images/4.png" alt="">
-                        </div>
-                        <div class="container-img_row3">
-                            <img class="img4" src="../images/4.png" alt="">
-                            <img class="img5" src="../images/4.png" alt="">
-                            <img class="img6" src="../images/4.png" alt="">
-                        </div>
-                        <div class="container-img_row4">
-                            <img class="img8" src="../images/4.png" alt="">
-                            <img class="img9" src="../images/4.png" alt="">
-                        </div>
-                        <div class="container-img_row5">
-                            <img class="img10" src="../images/4.png" alt="">
-                        </div>
-                        <div class="container-img_row6">
-                            <img class="img11" src="../images/4.png" alt="">
-                            <img class="img12" src="../images/4.png" alt="">
-                            <img class="img13" src="../images/4.png" alt="">
-                        </div>
+                        <img class="img1" src="../images/4.png" alt="">
+                        <img class="img2" src="../images/4.png" alt="">
+                        <img class="img3" src="../images/4.png" alt="">
+                        <img class="img4" src="../images/4.png" alt="">
+                        <img class="img5" src="../images/4.png" alt="">
+                        <img class="img6" src="../images/4.png" alt="">
+                        <img class="img7" src="../images/4.png" alt="">
+                        <img class="img8" src="../images/4.png" alt="">
+                        <img class="img9" src="../images/4.png" alt="">
+                        <img class="img10" src="../images/4.png" alt="">
+                        <img class="img11" src="../images/4.png" alt="">
+                        <img class="img12" src="../images/4.png" alt="">
+                        <img class="img13" src="../images/4.png" alt="">
+                        <img class="img14" src="../images/4.png" alt="">
+                        <img class="img15" src="../images/4.png" alt="">
+                        <img class="img16" src="../images/4.png" alt="">
+                        <img class="img17" src="../images/4.png" alt="">
+                        <img class="img18" src="../images/4.png" alt="">
+                        <img class="img19" src="../images/4.png" alt="">
+                        <img class="img20" src="../images/4.png" alt="">
+                        <img class="img21" src="../images/4.png" alt="">
+                        <img class="img22" src="../images/4.png" alt="">
+                        <img class="img23" src="../images/4.png" alt="">
+                        <img class="img24" src="../images/4.png" alt="">
+                        <img class="img25" src="../images/4.png" alt="">
+                        <img class="img26" src="../images/4.png" alt="">
+                        <img class="img27" src="../images/4.png" alt="">
+                        <img class="img28" src="../images/4.png" alt="">
+                        <img class="img29" src="../images/4.png" alt="">
+                        <img class="img30" src="../images/4.png" alt="">
+
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <!-- Deatail container End  -->
 
