--- a/DetailProfilePhoto/index.html
+++ b/DetailProfilePhoto/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family</title>
+    <title>Profile Photo</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
@@ -45,21 +45,21 @@
     </header>
     <!-- Header End -->
     <!-- Main Deatail Stop Crib  Start -->
-    <main class="home deatail-family">
+    <main class="home deatail-profilephoto">
 
         <!-- Deatail Banner Start -->
-        <div class="deatail-family_banner">
-            <img src="../images/4.png" alt="" srcset="">
+        <div class="deatail-profilephoto_banner">
+            <img src="../images/6.png" alt="" srcset="">
         </div>
         <!-- Deatail Banner End -->
 
         <!-- Deatail menu Start  -->
-        <div class="deatail-family_menu">
+        <div class="deatail-profilephoto_menu">
             <div class="container">
-                <div class="family-menu">
-                    <a href="http://" class="family-menu_home">Trang Chủ</a> -
-                    <a href="http://" class="family-menu_library">Thư Viện</a> -
-                    <a href="http://" class="family-menu_family">Family</a>
+                <div class="profilephoto-menu">
+                    <a href="http://" class="profilephoto-menu_home">Trang Chủ</a> -
+                    <a href="http://" class="profilephoto-menu_library">Thư Viện</a> -
+                    <a href="http://" class="profilephoto-menu_profilephoto">Profile Photo</a>
                 </div>
             </div>
         </div>
@@ -70,42 +70,43 @@
             <div class="container">
                 <div class="deatail-container">
                     <div class="deatail-container_title">
-                        Family
+                        Profile Photo
                     </div>
                     <div class="deatail-container_description">
-                        Lưu giữ khoảnh khắc đẹp ngày thường, những điểm mốc quan trọng của Gia đình tại TooP House.
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </div>
                     <div class="deatail-container_img">
-                        <img class="img1" src="../images/4.png" alt="">
-                        <img class="img2" src="../images/4.png" alt="">
-                        <img class="img3" src="../images/4.png" alt="">
-                        <img class="img4" src="../images/4.png" alt="">
-                        <img class="img5" src="../images/4.png" alt="">
-                        <img class="img6" src="../images/4.png" alt="">
-                        <img class="img7" src="../images/4.png" alt="">
-                        <img class="img8" src="../images/4.png" alt="">
-                        <img class="img9" src="../images/4.png" alt="">
-                        <img class="img10" src="../images/4.png" alt="">
-                        <img class="img11" src="../images/4.png" alt="">
-                        <img class="img12" src="../images/4.png" alt="">
-                        <img class="img13" src="../images/4.png" alt="">
-                        <img class="img14" src="../images/4.png" alt="">
-                        <img class="img15" src="../images/4.png" alt="">
-                        <img class="img16" src="../images/4.png" alt="">
-                        <img class="img17" src="../images/4.png" alt="">
-                        <img class="img18" src="../images/4.png" alt="">
-                        <img class="img19" src="../images/4.png" alt="">
-                        <img class="img20" src="../images/4.png" alt="">
-                        <img class="img21" src="../images/4.png" alt="">
-                        <img class="img22" src="../images/4.png" alt="">
-                        <img class="img23" src="../images/4.png" alt="">
-                        <img class="img24" src="../images/4.png" alt="">
-                        <img class="img25" src="../images/4.png" alt="">
-                        <img class="img26" src="../images/4.png" alt="">
-                        <img class="img27" src="../images/4.png" alt="">
-                        <img class="img28" src="../images/4.png" alt="">
-                        <img class="img29" src="../images/4.png" alt="">
-                        <img class="img30" src="../images/4.png" alt="">
+                        <img class="img1" src="../images/6.png" alt="">
+                        <img class="img2" src="../images/6.png" alt="">
+                        <img class="img3" src="../images/6.png" alt="">
+                        <img class="img4" src="../images/6.png" alt="">
+                        <img class="img5" src="../images/6.png" alt="">
+                        <img class="img6" src="../images/6.png" alt="">
+                        <img class="img7" src="../images/6.png" alt="">
+                        <img class="img8" src="../images/6.png" alt="">
+                        <img class="img9" src="../images/6.png" alt="">
+                        <img class="img10" src="../images/6.png" alt="">
+                        <img class="img11" src="../images/6.png" alt="">
+                        <img class="img12" src="../images/6.png" alt="">
+                        <img class="img13" src="../images/6.png" alt="">
+                        <img class="img14" src="../images/6.png" alt="">
+                        <img class="img15" src="../images/6.png" alt="">
+                        <img class="img16" src="../images/6.png" alt="">
+                        <img class="img17" src="../images/6.png" alt="">
+                        <img class="img18" src="../images/6.png" alt="">
+                        <img class="img19" src="../images/6.png" alt="">
+                        <img class="img20" src="../images/6.png" alt="">
+                        <img class="img21" src="../images/6.png" alt="">
+                        <img class="img22" src="../images/6.png" alt="">
+                        <img class="img23" src="../images/6.png" alt="">
+                        <img class="img24" src="../images/6.png" alt="">
+                        <img class="img25" src="../images/6.png" alt="">
+                        <img class="img26" src="../images/6.png" alt="">
+                        <img class="img27" src="../images/6.png" alt="">
+                        <img class="img28" src="../images/6.png" alt="">
+                        <img class="img29" src="../images/6.png" alt="">
+                        <img class="img30" src="../images/6.png" alt="">
                     </div>
                 </div>
             </div>
