--- a/DeatailWeddingAnniversaryPackage/index.html
+++ b/DeatailWeddingAnniversaryPackage/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youth Photography</title>
+    <title>Wedding Anniversary Package</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
@@ -45,21 +45,22 @@
     </header>
     <!-- Header End -->
     <!-- Main Deatail Stop Crib  Start -->
-    <main class="home deatail-photography">
+    <main class="home deatail-weddinganniversarypackage">
 
         <!-- Deatail Banner Start -->
-        <div class="deatail-photography_banner">
-            <img src="../images/5.png" alt="" srcset="">
+        <div class="deatail-weddinganniversarypackage_banner">
+            <img src="../images/6.png" alt="" srcset="">
         </div>
         <!-- Deatail Banner End -->
 
         <!-- Deatail menu Start  -->
-        <div class="deatail-photography_menu">
+        <div class="deatail-weddinganniversarypackage_menu">
             <div class="container">
-                <div class="photography-menu">
-                    <a href="http://" class="photography-menu_home">Trang Chủ</a> -
-                    <a href="http://" class="photography-menu_library">Thư Viện</a> -
-                    <a href="http://" class="photography-menu_photography">Youth Photography</a>
+                <div class="weddinganniversarypackage-menu">
+                    <a href="http://" class="weddinganniversarypackage-menu_home">Trang Chủ</a> -
+                    <a href="http://" class="weddinganniversarypackage-menu_library">Thư Viện</a> -
+                    <a href="http://" class="weddinganniversarypackage-menu_weddinganniversarypackage">Wedding
+                        Anniversary Package</a>
                 </div>
             </div>
         </div>
@@ -70,39 +71,48 @@
             <div class="container">
                 <div class="deatail-container">
                     <div class="deatail-container_title">
-                        Youth Photography
+                        Wedding Anniversary Package
                     </div>
                     <div class="deatail-container_description">
                         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                         consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </div>
                     <div class="deatail-container_img">
-                        <div class="container-img_row1">
-                            <img class="img1" src="../images/5.png" alt="">
-                            <img class="img2" src="../images/5.png" alt="">
-                            <img class="img3" src="../images/5.png" alt="">
-                        </div>
-                        <div class="container-img_row2">
-                            <img class="img4" src="../images/5.png" alt="">
-                            <img class="img5" src="../images/5.png" alt="">
-                            <img class="img6" src="../images/5.png" alt="">
-                        </div>
-                        <div class="container-img_row3">
-                            <img class="img7" src="../images/5.png" alt="">
-                        </div>
-                        <div class="container-img_row4">
-                            <img class="img8" src="../images/5.png" alt="">
-                            <img class="img9" src="../images/5.png" alt="">
-                            <img class="img10" src="../images/5.png" alt="">
-                        </div>
-                        <div class="container-img_row5">
-                            <img class="img11" src="../images/5.png" alt="">
-                            <img class="img12" src="../images/5.png" alt="">
-                            <img class="img13" src="../images/5.png" alt="">
-                        </div>
+                        <img class="img1" src="../images/6.png" alt="">
+                        <img class="img2" src="../images/6.png" alt="">
+                        <img class="img3" src="../images/6.png" alt="">
+                        <img class="img4" src="../images/6.png" alt="">
+                        <img class="img5" src="../images/6.png" alt="">
+                        <img class="img6" src="../images/6.png" alt="">
+                        <img class="img7" src="../images/6.png" alt="">
+                        <img class="img8" src="../images/6.png" alt="">
+                        <img class="img9" src="../images/6.png" alt="">
+                        <img class="img10" src="../images/6.png" alt="">
+                        <img class="img11" src="../images/6.png" alt="">
+                        <img class="img12" src="../images/6.png" alt="">
+                        <img class="img13" src="../images/6.png" alt="">
+                        <img class="img14" src="../images/6.png" alt="">
+                        <img class="img15" src="../images/6.png" alt="">
+                        <img class="img16" src="../images/6.png" alt="">
+                        <img class="img17" src="../images/6.png" alt="">
+                        <img class="img18" src="../images/6.png" alt="">
+                        <img class="img19" src="../images/6.png" alt="">
+                        <img class="img20" src="../images/6.png" alt="">
+                        <img class="img21" src="../images/6.png" alt="">
+                        <img class="img22" src="../images/6.png" alt="">
+                        <img class="img23" src="../images/6.png" alt="">
+                        <img class="img24" src="../images/6.png" alt="">
+                        <img class="img25" src="../images/6.png" alt="">
+                        <img class="img26" src="../images/6.png" alt="">
+                        <img class="img27" src="../images/6.png" alt="">
+                        <img class="img28" src="../images/6.png" alt="">
+                        <img class="img29" src="../images/6.png" alt="">
+                        <img class="img30" src="../images/6.png" alt="">
+
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <!-- Deatail container End  -->
 
